--- a/.github/workflows/aws_setup.yaml
+++ b/.github/workflows/aws_setup.yaml
@@ -6,6 +6,7 @@ on:
       - main
       - development
       - feature1
+      - workflow_dispatch
 permissions:
       id-token: write # This is required for aws oidc connection
       contents: read # This is required for actions/checkout
