--- a/.github/workflows/aws_setup.yaml
+++ b/.github/workflows/aws_setup.yaml
@@ -35,5 +35,5 @@ jobs:
       run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
-        sudo ./aws/install
+        sudo ./aws/install --update
         aws --version
