--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -13,20 +13,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials from AWS account
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+        role-to-assume: ${{ secrets.AWS_ROLE }}
+        aws-region: ${{ secrets.AWS_REGION }}
+        role-session-name: GitHub-OIDC-TERRAFORM
 
     - name: Set up AWS CLI
       run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
-        sudo ./aws/install
+        sudo ./aws/install --update
         aws --version
 
-    - name: Deploy AWS Service Catalog Product
-      run: |
-        aws servicecatalog create-product --name MyProduct --owner MyOwner --product-type CLOUD_FORMATION_TEMPLATE --provisioning-artifact-parameters Description=MyProduct,Info={LoadTemplateFromURL=https://example.com/myproduct.json},Name=MyProduct
+    #- name: Deploy AWS Service Catalog Product
+    #  run: |
+    #    aws servicecatalog create-product --name MyProduct --owner MyOwner --product-type CLOUD_FORMATION_TEMPLATE --provisioning-artifact-parameters Description=MyProduct,Info={LoadTemplateFromURL=https://example.com/myproduct.json},Name=MyProduct
