--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -18,7 +18,7 @@ jobs:
       with:
         role-to-assume: ${{ secrets.AWS_ROLE }}
         aws-region: ${{ secrets.AWS_REGION }}
-        role-session-name: GitHub-OIDC-TERRAFORM
+        role-session-name: GitHub-OIDC-TERRAFORM1
 
     - name: Set up AWS CLI
       run: |
