--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -31,7 +31,17 @@ jobs:
         unzip awscliv2.zip
         sudo ./aws/install --update
         aws --version
+    - name: HashiCorp - Setup Terraform
+      uses: hashicorp/setup-terraform@v2.0.3
+      
+    - name: 'Terraform Init'
+      run: terraform init
 
+    - name: 'Terraform Validate'
+      run: terraform validate
+
+    - name: 'Terraform Plan'
+      run: terraform plan
     #- name: Deploy AWS Service Catalog Product
     #  run: |
     #    aws servicecatalog create-product --name MyProduct --owner MyOwner --product-type CLOUD_FORMATION_TEMPLATE --provisioning-artifact-parameters Description=MyProduct,Info={LoadTemplateFromURL=https://example.com/myproduct.json},Name=MyProduct
