--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -33,9 +33,10 @@ jobs:
         aws --version
     - name: HashiCorp - Setup Terraform
       uses: hashicorp/setup-terraform@v2.0.3
-      
+
     - name: 'Terraform Init'
       run: terraform init
+      working-directory: ./Infrastructure/sc_product
 
     - name: 'Terraform Validate'
       run: terraform validate
