--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -36,11 +36,11 @@ jobs:
 
     - name: 'Terraform Init'
       run: terraform init
-      working-directory: ./Infrastructure
+      working-directory: ./Infrastructure/sc_product
 
     - name: 'Terraform Validate'
       run: terraform validate
-      working-directory: ./Infrastructure
+      working-directory: ./Infrastructure/sc_product
 
     - name: 'Terraform Plan'
       run: terraform plan
