added new simple test code

--- a/.github/workflows/aws_setup.yaml
+++ b/.github/workflows/aws_setup.yaml
@@ -14,6 +14,9 @@ permissions:
 env:
   TF_LOG: INFO
   AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+  AWS_BUCKET_KEY_NAME: ${{ secrets.AWS_BUCKET_KEY_NAME }}
+  AWS_ROLE: ${{ secrets.AWS_ROLE }}
 
 
 jobs:
