--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -11,6 +11,9 @@ permissions:
 env:
   TF_LOG: INFO
   AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+  AWS_BUCKET_KEY_NAME: ${{ secrets.AWS_BUCKET_KEY_NAME }}
+  AWS_ROLE: ${{ secrets.AWS_ROLE }}
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -36,15 +39,16 @@ jobs:
 
     - name: 'Terraform Init'
       run: terraform init
-      working-directory: ./Infrastructure/sc_product
+      working-directory: ./Infrastructure
 
     - name: 'Terraform Validate'
       run: terraform validate
-      working-directory: ./Infrastructure/sc_product
+      working-directory: ./Infrastructure
 
     - name: 'Terraform Plan'
       run: terraform plan
-      working-directory: ./Infrastructure/sc_product
+      working-directory: ./Infrastructure
+
     #- name: Deploy AWS Service Catalog Product
     #  run: |
     #    aws servicecatalog create-product --name MyProduct --owner MyOwner --product-type CLOUD_FORMATION_TEMPLATE --provisioning-artifact-parameters Description=MyProduct,Info={LoadTemplateFromURL=https://example.com/myproduct.json},Name=MyProduct
