--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -49,6 +49,10 @@ jobs:
       run: terraform plan
       working-directory: ./Infrastructure/terraform
 
+    - name: 'Terraform apply'
+      run: terraform apply
+      working-directory: ./Infrastructure/terraform
+
     #- name: Deploy AWS Service Catalog Product
     #  run: |
     #    aws servicecatalog create-product --name MyProduct --owner MyOwner --product-type CLOUD_FORMATION_TEMPLATE --provisioning-artifact-parameters Description=MyProduct,Info={LoadTemplateFromURL=https://example.com/myproduct.json},Name=MyProduct
