--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -17,6 +17,12 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      TF_LOG: INFO
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ROLE: ${{ secrets.AWS_ROLE }}
+      TF_BACKEND_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
+      TF_BACKEND_KEY: ${{ secrets.AWS_BUCKET_KEY_NAME }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
