--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -43,6 +43,18 @@ jobs:
     - name: HashiCorp - Setup Terraform
       uses: hashicorp/setup-terraform@v2.0.3
 
+    - name: Create Backend Configuration
+      run: |
+        cat > backend.tf <<EOF
+        terraform {
+          backend "s3" {
+            bucket = "${TF_BACKEND_BUCKET}"
+            key    = "${TF_BACKEND_KEY}"
+            region = "${AWS_DEFAULT_REGION}"
+          }
+        }
+        EOF
+
     - name: 'Terraform Init'
       run: terraform init
       working-directory: ./Infrastructure/terraform
