update new simple test code

--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -56,7 +56,7 @@ jobs:
         EOF
 
     - name: 'Terraform Init'
-      run: terraform init -backend-config=backend.tf
+      run: terraform init -backend-config=./backend.tf
       working-directory: ./Infrastructure/terraform
 
     - name: 'Terraform Validate'
@@ -68,7 +68,7 @@ jobs:
       working-directory: ./Infrastructure/terraform
 
     - name: 'Terraform apply'
-      run: terraform apply -auto-approve -no-color -backend-config=backend.tf
+      run: terraform apply -auto-approve -no-color -backend-config=./backend.tf
       working-directory: ./Infrastructure/terraform
 
     #- name: Deploy AWS Service Catalog Product
