update new simple test code

--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -61,6 +61,7 @@ jobs:
       working-directory: ./Infrastructure/terraform
       run: |
         pwd
+        cat ../../backend.tf
         terraform init -backend-config=../../backend.tf
 
     # - name: 'Terraform Validate'
