update new simple test code

--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -66,17 +66,17 @@ jobs:
         terraform init -backend-config=../../backend.tf
         # terraform init
 
-    # - name: 'Terraform Validate'
-    #   run: terraform validate
-    #   working-directory: ./Infrastructure/terraform
+    - name: 'Terraform Validate'
+      run: terraform validate -backend-config=../../backend.tf
+      working-directory: ./Infrastructure/terraform
 
-    # - name: 'Terraform Plan'
-    #   run: terraform plan -backend-config=backend.tf
-    #   working-directory: ./Infrastructure/terraform
+    - name: 'Terraform Plan'
+      run: terraform plan -backend-config=backend.tf
+      working-directory: ./Infrastructure/terraform
 
-    # - name: 'Terraform apply'
-    #   run: terraform apply -auto-approve -no-color -backend-config=./backend.tf
-    #   working-directory: ./Infrastructure/terraform
+    - name: 'Terraform apply'
+      run: terraform apply -auto-approve -no-color -backend-config=../../backend.tf
+      working-directory: ./Infrastructure/terraform
 
     #- name: Deploy AWS Service Catalog Product
     #  run: |
