--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -71,7 +71,7 @@ jobs:
       working-directory: ./Infrastructure/terraform
 
     - name: 'Terraform Plan'
-      run: terraform plan -backend-config=backend.tf
+      run: terraform plan -backend-config=../../backend.tf
       working-directory: ./Infrastructure/terraform
 
     - name: 'Terraform apply'
