--- a/.github/workflows/deploy_service_catalogue_product.yaml
+++ b/.github/workflows/deploy_service_catalogue_product.yaml
@@ -44,31 +44,30 @@ jobs:
     - name: HashiCorp - Setup Terraform
       uses: hashicorp/setup-terraform@v2
 
-    # - name: Create Backend Configuration
-    #   run: |
-    #     echo 'bucket = "${{ secrets.AWS_BUCKET_NAME }}"' > backend.hcl
-    #     echo 'key    = "${{ secrets.AWS_BUCKET_KEY_NAME }}"' >> backend.hcl
-    #     echo 'region = "${{ secrets.AWS_REGION }}"' >> backend.hcl  
-        
-        # cat > backend.tf <<EOF
-        # terraform {
-        #   backend "s3" {
-        #     bucket = "${{ env.TF_BACKEND_BUCKET }}"
-        #     key    = "${{ env.TF_BACKEND_KEY }}"
-        #     region = "${{ env.AWS_DEFAULT_REGION }}"
-        #   }
-        # }
-        # EOF
-        # pwd
-        # ls -ltr
+    - name: Create Backend Configuration
+      run: |
+        # echo 'bucket = "${{ secrets.AWS_BUCKET_NAME }}"' > backend.hcl
+        # echo 'key    = "${{ secrets.AWS_BUCKET_KEY_NAME }}"' >> backend.hcl
+        # echo 'region = "${{ secrets.AWS_REGION }}"' >> backend.hcl  
+        cat > backend.tf <<EOF
+        terraform {
+          backend "s3" {
+            bucket = "${{ env.TF_BACKEND_BUCKET }}"
+            key    = "${{ env.TF_BACKEND_KEY }}"
+            region = "${{ env.AWS_DEFAULT_REGION }}"
+          }
+        }
+        EOF
+        pwd
+        ls -ltr
 
     - name: 'Terraform Init'
       working-directory: ./Infrastructure/terraform
       run: |
         pwd
-        # cat ../../backend.hcl
-        terraform init -backend-config="bucket=${{ secrets.AWS_BUCKET_NAME }}" -backend-config="key=${{ secrets.AWS_BUCKET_KEY_NAME }}" -backend-config="region=${{ secrets.AWS_REGION }}"
-        # terraform init -backend-config=../../backend.hcl
+        cat ../../backend.tf
+        # terraform init -backend-config="bucket=${{ secrets.AWS_BUCKET_NAME }}" -backend-config="key=${{ secrets.AWS_BUCKET_KEY_NAME }}" -backend-config="region=${{ secrets.AWS_REGION }}"
+        terraform init -backend-config=../../backend.tf
         # terraform init
 
     - name: 'Terraform Validate'
@@ -76,12 +75,12 @@ jobs:
       working-directory: ./Infrastructure/terraform
 
     - name: 'Terraform Plan'
-      run: terraform plan #-backend-config="bucket=${{ secrets.AWS_BUCKET_NAME }}" -backend-config="key=${{ secrets.AWS_BUCKET_KEY_NAME }}" -backend-config="region=${{ secrets.AWS_REGION }}"
+      run: terraform plan -backend-config=../../backend.hcl
       working-directory: ./Infrastructure/terraform
 
-    - name: 'Terraform apply'
-      run: terraform apply -auto-approve -no-color #-backend-config="bucket=${{ secrets.AWS_BUCKET_NAME }}" -backend-config="key=${{ secrets.AWS_BUCKET_KEY_NAME }}" -backend-config="region=${{ secrets.AWS_REGION }}"
-      working-directory: ./Infrastructure/terraform
+    # - name: 'Terraform apply'
+    #   run: terraform apply -auto-approve -no-color -backend-config=../../backend.tf
+    #   working-directory: ./Infrastructure/terraform
 
     #- name: Deploy AWS Service Catalog Product
     #  run: |
